corpus/c/syntax/case-11/snapshots/gcc9_12/single_sink_structured/render.default.txt
error: syntax error
--> src/main.c:2:13
help: fix the first parser error at the user-owned location
why: expected ';' before '}' token
| src/main.c:2:13
|     return 0
|             ^
suggested edit: insert ';' at src/main.c:2:13
  patch: src/main.c
  2 -     return 0
  2 +     return 0;
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output